<resources>
    <string name="app_name">AlaviShop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_products">جدیدترین محصولات</string>
    <string name="most_visited">پربازدید ترین محصولات</string>
    <string name="best_products">بهترین محصولات</string>
    <string name="description">توضیحات</string>
    <string name="price">قیمت</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="digital">دیجیتال</string>
    <string name="bedasht">بهداشت</string>
    <string name="health">بهداشت</string>
    <string name="market">سوپر مارکت</string>
    <string name="clothes">پوشاک</string>
    <string name="creativity">سرگرمی</string>
    <string name="category">دسته بندی محصولات </string>
    <string name="card">سبد خرید</string>
    <string name="profile">پروفایل</string>
    <string name="empty_product_list">لیست خالی است !</string>
    <string name="filter_txt">فیلتر کردن</string>
    <string name="sort_txt">مرتب سازی</string>
</resources>