<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
<LinearLayout
    android:layout_width="match_parent"
    android:background="@color/eggplant"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.HomePageFragment">

    <TextView
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/last_products" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_newest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/most_visited" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_most_visited"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <TextView
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/best_products" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view_best"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>
</layout>