<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<RelativeLayout
    android:background="@color/white"
    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".view.activity.ListOfCategoryActivity">

    <TextView
        android:visibility="gone"
        android:id="@+id/empty_list"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/empty_product_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/sort_filter_card"
        app:cardElevation="8dp"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="56dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_centerVertical="true"
                android:id="@+id/filter_relative"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true">
                <TextView
                    android:layout_centerInParent="true"
                    android:id="@+id/filter_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/filter_txt"
                    android:textSize="16sp"
                    android:textStyle="bold"
                   />
            </RelativeLayout>
            <ImageView
                android:id="@+id/separator"
                android:src="@color/gray"
                android:layout_width="4dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:layout_toLeftOf="@id/filter_relative" />

            <RelativeLayout
                android:id="@+id/sort_relative"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toLeftOf="@id/separator"
                android:layout_alignParentLeft="true"
              >

                <TextView
                    android:layout_centerInParent="true"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:id="@+id/sort_txt"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sort_txt"
                    android:layout_marginRight="4dp"
                   />

            </RelativeLayout>
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@id/sort_filter_card"
        android:id="@+id/products_list_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <ProgressBar
        android:visibility="visible"
        android:layout_centerInParent="true"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>
</layout>